language support for bangla, tamil and Hindi added

--- a/src/main/java/com/babydestination/automation/config/eng.properties
+++ b/src/main/java/com/babydestination/automation/config/eng.properties
@@ -1,13 +1,16 @@
 Continue_Reading = Continue Reading
 partner_with_us=partner-with-us
-homepage_title=Baby Destination - Get parenting, child care and kids food information
+homepage_url=https://www.babydestination.com/
 Join_WhatsApp_Group=Join WhatsApp Group
 Unlock_Now=Unlock Now
 Whatsapp_Directory=Whatsapp Directory
+WA_Widget_Text=Get your questions answered by our 45,000+ trusted moms community
 Timeline=Timeline
 Ask_moms_anything=Ask moms anything
+Ask_Mom_Widget_Text=50 हज़ार से ज्यादा प्रश्नों के जवाब दिए जा चुके हैं|
 FB_Connect= +1 JOIN
 Sign_up=Sign-up
+login_button_text=LOGIN / SIGN-UP
 SEE_MORE=SEE MORE
 Forum_Ask_Question=Forum Ask Question
 Prod_FB_Page=https://www.facebook.com/Babydestination/
@@ -15,3 +18,9 @@ Prod_Insta_Page=https://www.instagram.com/baby_destinationofficial/
 Prod_Twitter_Page=https://twitter.com/@babydestination
 Prod_Youtube_Page=https://www.youtube.com/channel/UCItunh2YRiNNgwvGKqhVk9Q
 search_baby_care=baby care
+Baby_Destination=Baby Destination
+
+about_us=https://www.babydestination.com/about-us
+privacy_policy=https://www.babydestination.com/privacy-policy
+contact=https://www.babydestination.com/contact
+terms_of_use=https://www.babydestination.com/terms-of-use
