--- a/src/main/java/com/babydestination/automation/config/bangla.properties
+++ b/src/main/java/com/babydestination/automation/config/bangla.properties
@@ -1,13 +1,16 @@
 Continue_Reading = পড়তে থাকুন
 partner_with_us=partner-with-us
-homepage_title=Baby Destination - Get parenting, child care and kids food information in Bengali | বেবি ডেস্টিনেশন
+homepage_url=https://bangla.babydestination.com/
 Join_WhatsApp_Group=হোয়াটস অ্য়াপ গ্রূপ -এ যুক্ত হোন 
 Unlock_Now=আনলক করুন
 Whatsapp_Directory=Whatsapp Directory
+WA_Widget_Text=নিজের প্রশ্নের উত্তর পেয়ে যান ৪৫,০০০ মায়ের কমিউনিটি থেকে, গ্রূপ জয়েন করুন এখনই!
 Timeline=Timeline
 Ask_moms_anything=মায়েদের জিজ্ঞাসা করুন যেটা আপনার অজানা
+Ask_Mom_Widget_Text=৫০,০০০ এরও বেশি প্রশ্নের উত্তর!
 FB_Connect= +1 JOIN
 Sign_up=Sign-up
+login_button_text=লগ ইন / সাইন-আপ
 SEE_MORE=আরও দেখুন
 Forum_Ask_Question=Forum Ask Question
 Prod_FB_Page=https://www.facebook.com/BabyDestinationBangla/
@@ -15,3 +18,9 @@ Prod_Insta_Page=https://www.instagram.com/baby_destinationofficial/
 Prod_Twitter_Page=https://twitter.com/@babydestination
 Prod_Youtube_Page=https://www.youtube.com/channel/UCItunh2YRiNNgwvGKqhVk9Q
 search_baby_care=শিশুর যত্ন
+Baby_Destination=বেবি ডেস্টিনেশন
+
+about_us=https://bangla.babydestination.com/about-us
+privacy_policy=https://bangla.babydestination.com/privacy-policy
+contact=https://bangla.babydestination.com/contact
+terms_of_use=https://bangla.babydestination.com/terms-of-use
