--- a/src/main/java/com/babydestination/automation/config/hindi.properties
+++ b/src/main/java/com/babydestination/automation/config/hindi.properties
@@ -1,13 +1,16 @@
 Continue_Reading = और पढ़ें
 partner_with_us=partner-with-us
-homepage_title=Baby Destination Hindi - Get parenting, child care and kids food information in Hindi
+homepage_url=https://hindi.babydestination.com/
 Join_WhatsApp_Group=WhatsApp समूह से जुड़े
 Unlock_Now=अभी अनलॉक करे
 Whatsapp_Directory=Whatsapp Directory
+WA_Widget_Text=अपने प्रश्नों का उत्तर हमारी 45,000 से अधिक विश्वसनीय माओं की कॉम्यूनिटीज से पाएं, अभी ग्रुप जॉइन करें।
 Timeline=Timeline
 Ask_moms_anything=अन्य माँ से पूछे...
+Ask_Mom_Widget_Text=50 हज़ार से ज्यादा प्रश्नों के जवाब दिए जा चुके हैं|
 FB_Connect= +1 JOIN
 Sign_up=Sign-up
+login_button_text=लॉग इन/साइन-अप
 SEE_MORE=और देखें
 Forum_Ask_Question=Forum Ask Question
 Prod_FB_Page=https://www.facebook.com/BabyDestinationHindi/
@@ -15,3 +18,9 @@ Prod_Insta_Page=https://www.instagram.com/baby_destinationofficial/
 Prod_Twitter_Page=https://twitter.com/@babydestination
 Prod_Youtube_Page=https://www.youtube.com/channel/UCItunh2YRiNNgwvGKqhVk9Q
 search_baby_care=शिशु की देख - रेख
+Baby_Destination=बेबी डेस्टिनेशन
+
+about_us=https://hindi.babydestination.com/about-us
+privacy_policy=https://hindi.babydestination.com/privacy-policy
+contact=https://hindi.babydestination.com/contact
+terms_of_use=https://hindi.babydestination.com/terms-of-use
