--- a/src/main/java/com/babydestination/automation/config/tamil.properties
+++ b/src/main/java/com/babydestination/automation/config/tamil.properties
@@ -1,13 +1,16 @@
 Continue_Reading = தொடர்ந்து படிக்க
 partner_with_us=partner-with-us
-homepage_title=Baby Destination - Get parenting, child care and kids food information in Tamil
+homepage_url=https://tamil.babydestination.com/
 Join_WhatsApp_Group=WhatsApp குழுவில் சேர
 Unlock_Now=இப்போதே திறக்க
 Whatsapp_Directory=Whatsapp Directory
+WA_Widget_Text=எங்களின் 45,000+ மேற்பட்ட நம்பகமான தாய்மார்களை உள்ளடக்கிய குழுவில் உடனே இணைந்திருங்கள்.
 Timeline=Timeline
 Ask_moms_anything=தாய்மார்களிடம்  கேட்க...
+Ask_Mom_Widget_Text=50,000+ கேள்விகளுக்கான பதில்கள்..! 
 FB_Connect= +1 JOIN
 Sign_up=Sign-up
+login_button_text=உள்நுழைய/பதிவு செய்க
 SEE_MORE=மேலும் பார்க்க
 Forum_Ask_Question=Forum Ask Question
 Prod_FB_Page=https://www.facebook.com/BabyDestinationTamil/
@@ -15,3 +18,9 @@ Prod_Insta_Page=https://www.instagram.com/baby_destinationofficial/
 Prod_Twitter_Page=https://twitter.com/@babydestination
 Prod_Youtube_Page=https://www.youtube.com/channel/UCItunh2YRiNNgwvGKqhVk9Q
 search_baby_care=குழத்தை நலம்
+Baby_Destination=பேபி டெஸ்டினேஷன்
+
+about_us=https://tamil.babydestination.com/about-us
+privacy_policy=https://tamil.babydestination.com/privacy-policy
+contact=https://tamil.babydestination.com/contact
+terms_of_use=https://tamil.babydestination.com/terms-of-use
