fixed issues regarding properties files

--- a/src/main/java/com/babydestination/automation/config/bangla.properties
+++ b/src/main/java/com/babydestination/automation/config/bangla.properties
@@ -1,6 +1,6 @@
 Continue_Reading = পড়তে থাকুন
 partner_with_us=partner-with-us
-homepage_url=https://bangla.babydestination.com/
+homepage_title=Baby Destination - Get parenting, child care and kids food information in Bengali | বেবি ডেস্টিনেশন
 Join_WhatsApp_Group=হোয়াটস অ্য়াপ গ্রূপ -এ যুক্ত হোন 
 Unlock_Now=আনলক করুন
 Whatsapp_Directory=Whatsapp Directory
