--- a/src/main/java/com/babydestination/automation/config/config.properties
+++ b/src/main/java/com/babydestination/automation/config/config.properties
@@ -1,3 +1,4 @@
-url=https://stg.babydestination.com
+url=https://stg.hindi.babydestination.com
 browser=chrome
-env=prod_eng
+language=Hindi
+env=stg
