--- a/src/main/java/com/babydestination/automation/config/hindi.properties
+++ b/src/main/java/com/babydestination/automation/config/hindi.properties
@@ -1,11 +1,10 @@
 Continue_Reading = और पढ़ें
 partner_with_us=partner-with-us
-homepage_url=https://hindi.babydestination.com/
+homepage_title=Baby Care, Pregnant Women & Mother Care Tips in Hindi, बेबी केयर, प्रेग्नेंट वीमेन : Baby Destination
 Join_WhatsApp_Group=WhatsApp समूह से जुड़े
 Unlock_Now=अभी अनलॉक करे
 Whatsapp_Directory=Whatsapp Directory
 WA_Widget_Text=अपने प्रश्नों का उत्तर हमारी 45,000 से अधिक विश्वसनीय माओं की कॉम्यूनिटीज से पाएं, अभी ग्रुप जॉइन करें।
-Timeline=Timeline
 Ask_moms_anything=अन्य माँ से पूछे...
 Ask_Mom_Widget_Text=50 हज़ार से ज्यादा प्रश्नों के जवाब दिए जा चुके हैं|
 FB_Connect= +1 JOIN
@@ -24,3 +23,4 @@ about_us=https://hindi.babydestination.com/about-us
 privacy_policy=https://hindi.babydestination.com/privacy-policy
 contact=https://hindi.babydestination.com/contact
 terms_of_use=https://hindi.babydestination.com/terms-of-use
+
