--- a/src/main/java/com/babydestination/automation/config/tamil.properties
+++ b/src/main/java/com/babydestination/automation/config/tamil.properties
@@ -1,13 +1,13 @@
 Continue_Reading = தொடர்ந்து படிக்க
 partner_with_us=partner-with-us
-homepage_url=https://tamil.babydestination.com/
+homepage_title=Baby Destination - Get parenting, child care and kids food information in Tamil
 Join_WhatsApp_Group=WhatsApp குழுவில் சேர
 Unlock_Now=இப்போதே திறக்க
 Whatsapp_Directory=Whatsapp Directory
 WA_Widget_Text=எங்களின் 45,000+ மேற்பட்ட நம்பகமான தாய்மார்களை உள்ளடக்கிய குழுவில் உடனே இணைந்திருங்கள்.
 Timeline=Timeline
 Ask_moms_anything=தாய்மார்களிடம்  கேட்க...
-Ask_Mom_Widget_Text=50,000+ கேள்விகளுக்கான பதில்கள்..! 
+Ask_Mom_Widget_Text=50,000+ கேள்விகளுக்கான பதில்கள்..!
 FB_Connect= +1 JOIN
 Sign_up=Sign-up
 login_button_text=உள்நுழைய/பதிவு செய்க
