--- a/src/main/java/com/babydestination/automation/config/eng.properties
+++ b/src/main/java/com/babydestination/automation/config/eng.properties
@@ -1,13 +1,13 @@
 Continue_Reading = Continue Reading
 partner_with_us=partner-with-us
-homepage_url=https://www.babydestination.com/
+homepage_title=Baby Destination - Get parenting, child care and kids food information
 Join_WhatsApp_Group=Join WhatsApp Group
 Unlock_Now=Unlock Now
 Whatsapp_Directory=Whatsapp Directory
 WA_Widget_Text=Get your questions answered by our 45,000+ trusted moms community
 Timeline=Timeline
 Ask_moms_anything=Ask moms anything
-Ask_Mom_Widget_Text=50 हज़ार से ज्यादा प्रश्नों के जवाब दिए जा चुके हैं|
+Ask_Mom_Widget_Text=More than 50,000+ Questions Answered!
 FB_Connect= +1 JOIN
 Sign_up=Sign-up
 login_button_text=LOGIN / SIGN-UP
