changes done to resolve some dependencies of config file

--- a/src/main/java/com/babydestination/automation/config/config.properties
+++ b/src/main/java/com/babydestination/automation/config/config.properties
@@ -1,4 +1,6 @@
-url=https://stg.hindi.babydestination.com
+url=https://stg.babydestination.com
 browser=chrome
-language=Hindi
-env=stg
+language=English
+
+
+#this env is for cookie settings like, stg,devAws,qa, BD-AccessTokenKey (for prod)    for prod do not mention anything in env
