--- a/src/main/java/com/babydestination/automation/config/eng.properties
+++ b/src/main/java/com/babydestination/automation/config/eng.properties
@@ -1,6 +1,6 @@
 Continue_Reading = Continue Reading
 partner_with_us=partner-with-us
-homepage_title=Baby Destination - Get parenting, child care and kids food information
+homepage_title=Baby Destination - Get Pregnant Women, Newborn Baby & Mom Care Tips
 Join_WhatsApp_Group=Join WhatsApp Group
 Unlock_Now=Unlock Now
 Whatsapp_Directory=Whatsapp Directory
@@ -18,7 +18,10 @@ Prod_Insta_Page=https://www.instagram.com/baby_destinationofficial/
 Prod_Twitter_Page=https://twitter.com/@babydestination
 Prod_Youtube_Page=https://www.youtube.com/channel/UCItunh2YRiNNgwvGKqhVk9Q
 search_baby_care=baby care
-Baby_Destination=Baby Destination
+Baby_Destination_EN=Baby Destination
+Baby_Destination_HI=बेबी डेस्टिनेशन
+Baby_Destination_TA=பேபி டெஸ்டினேஷன்
+Baby_Destination_BE=বেবি ডেস্টিনেশন
 
 about_us=https://www.babydestination.com/about-us
 privacy_policy=https://www.babydestination.com/privacy-policy
