--- a/src/main/java/com/babydestination/automation/config/hindi.properties
+++ b/src/main/java/com/babydestination/automation/config/hindi.properties
@@ -17,7 +17,11 @@ Prod_Insta_Page=https://www.instagram.com/baby_destinationofficial/
 Prod_Twitter_Page=https://twitter.com/@babydestination
 Prod_Youtube_Page=https://www.youtube.com/channel/UCItunh2YRiNNgwvGKqhVk9Q
 search_baby_care=शिशु की देख - रेख
-Baby_Destination=बेबी डेस्टिनेशन
+Baby_Destination_EN=Baby Destination
+Baby_Destination_HI=बेबी डेस्टिनेशन
+Baby_Destination_TA=பேபி டெஸ்டினேஷன்
+Baby_Destination_BE=বেবি ডেস্টিনেশন
+
 
 about_us=https://hindi.babydestination.com/about-us
 privacy_policy=https://hindi.babydestination.com/privacy-policy
