--- a/src/main/java/com/babydestination/automation/config/tamil.properties
+++ b/src/main/java/com/babydestination/automation/config/tamil.properties
@@ -18,7 +18,11 @@ Prod_Insta_Page=https://www.instagram.com/baby_destinationofficial/
 Prod_Twitter_Page=https://twitter.com/@babydestination
 Prod_Youtube_Page=https://www.youtube.com/channel/UCItunh2YRiNNgwvGKqhVk9Q
 search_baby_care=குழத்தை நலம்
-Baby_Destination=பேபி டெஸ்டினேஷன்
+Baby_Destination_EN=Baby Destination
+Baby_Destination_HI=बेबी डेस्टिनेशन
+Baby_Destination_TA=பேபி டெஸ்டினேஷன்
+Baby_Destination_BE=বেবি ডেস্টিনেশন
+
 
 about_us=https://tamil.babydestination.com/about-us
 privacy_policy=https://tamil.babydestination.com/privacy-policy
